--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.35", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+indexmap = "2.9.0"
+
 # error handling
 eyre = "0.6"
 color-eyre = "0.6"
@@ -12,9 +17,6 @@ color-eyre = "0.6"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-error = "0.2"
-clap = { version = "4.5.35", features = ["derive"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
