--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tracing-error = "0.2"
 [dev-dependencies]
 assert_cmd = "2.0.16"
 expect-test = "1.5.1"
+pretty_assertions = "1.4.1"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
