--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,6 +1,1 @@
-# Copyright Kani Contributors
-# SPDX-License-Identifier: Apache-2.0 OR MIT
-
-[toolchain]
-channel = "nightly-2025-04-01"
-components = ["llvm-tools", "rustc-dev", "rust-src", "rustfmt"]
+kani/rust-toolchain.toml
