--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,18 +4,25 @@ on:
   push:
     branches: 
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        submodules: 'recursive'
 
-      - uses: taiki-e/install-action@v2
-        with:
-          tool: kani-verifier
+      - name: Install kani
+        working-directory: kani
+        run: |
+          ./scripts/setup/ubuntu/install_deps.sh
+          cargo build-dev -- --release
+          echo PATH=$(pwd)/scripts:$PATH >> $GITHUB_ENV
 
       - name: Check kani folder
-        run: kani --version | awk '{system("ls -alh ~/.kani/"$1 "-" $2)}'
+        run: kani --version
 
       - name: Run tests
         run: cargo test -- --nocapture
