--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 clap = { version = "4.5.35", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", features = ["preserve_order"] }
-indexmap = "2.9.0"
+indexmap = { version = "2.9.0", features = ["serde"] }
 
 # error handling
 eyre = "0.6"
