--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
           submodules: 'recursive'
 
       - name: Install kani
-        uses: ./.github/actions/install-kani.yml
+        uses: ./.github/actions/install-kani
 
       - name: Run tests
         run: cargo test -- --nocapture
@@ -29,7 +29,7 @@ jobs:
           submodules: 'recursive'
 
       - name: Install kani
-        uses: ./.github/actions/install-kani.yml
+        uses: ./.github/actions/install-kani
 
       - name: Install distributed-verification
         run: cargo install --path . --locked
@@ -66,7 +66,7 @@ jobs:
           submodules: 'recursive'
 
       - name: Install kani
-        uses: ./.github/actions/install-kani.yml
+        uses: ./.github/actions/install-kani
 
       - name: Kani list
         working-directory: tests/dummy-crate/verify-rust-std
