--- a/.github/actions/install-kani/action.yml
+++ b/.github/actions/install-kani/action.yml
@@ -2,6 +2,10 @@ name: Install kani
 
 on:
   workflow_call:
+    inputs:
+      verify-rust-std-commit:
+        required: true
+        type: string
 
 jobs:
   install-kani:
@@ -19,8 +23,6 @@ jobs:
 
       - name: Clone verify-rust-std
         working-directory: tests/dummy-crate
-        env:
-          COMMIT: 5cf80a84afdeceec0d85e790a5cc585ff2e513ed
         run: |
           git clone https://github.com/model-checking/verify-rust-std.git --recursive
-          cd verify-rust-std && git checkout ${{ env.COMMIT }}
+          cd verify-rust-std && git checkout ${{ inputs.verify-rust-std-commit }}
