--- a/.github/actions/install-kani/action.yml
+++ b/.github/actions/install-kani/action.yml
@@ -7,6 +7,9 @@ on:
         required: true
         type: string
 
+env:
+  VERIFY_RUST_STD_COMMIT: ${{ inputs.verify-rust-std-commit }}
+
 jobs:
   install-kani:
     runs-on: ubuntu-latest
@@ -25,4 +28,4 @@ jobs:
         working-directory: tests/dummy-crate
         run: |
           git clone https://github.com/model-checking/verify-rust-std.git --recursive
-          cd verify-rust-std && git checkout ${{ inputs.verify-rust-std-commit }}
+          cd verify-rust-std && git checkout ${{ env.VERIFY_RUST_STD_COMMIT }}
