--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,6 +82,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: artifact-kani-list
-          path: kani-list.json
+          path: ./tests/dummy-crate/verify-rust-std/kani-list.json
           compression-level: 9
+          if-no-files-found: error
 
