cli: change the value of --check-kani-list from bool to kani-list.json path
close https://github.com/os-checker/distributed-verification/issues/63

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,7 @@ jobs:
           name: artifact-libcore
           path: core.json
           compression-level: 9
+          if-no-files-found: error
 
   kani-list:
     runs-on: ubuntu-latest
