verify_rust_std: apply --continue-compilation

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,12 +44,11 @@ jobs:
         run: |
           ls -alh ${{ env.VERIFY_RUST_STD_LIBRARY }}
           cargo r --example verify_rust_std
-          cat ${{ env.CORE_JSON }}
 
-      - name: Print core.json
+      - name: View core.json
         run: |
           ls -alh core.json
-          head -n 5000 core.json
+          head -n 1000 core.json
 
       - name: Upload core.json
         uses: actions/upload-artifact@v4
